--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,211 +1,164 @@
 <!DOCTYPE html>
 <html itemscope="itemscope" itemtype="http://schema.org/Product" lang="en">
 <head>
-    <script type="text/javascript">var NREUMQ = NREUMQ || [];
-    NREUMQ.push(["mark", "firstbyte", new Date().getTime()]);</script>
     <title>首页 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
-    <meta content="telephone=no" name="format-detection"/>
-    <link href="./image/logo.png"
-          rel="apple-touch-icon-precomposed"/>
-    <link href="./image/logo.png"
-          rel="apple-touch-icon-precomposed" size="144x144"/>
-    <link href="./css/jdi.css" media="all"
-          rel="stylesheet"/>
-    <script type="text/javascript">var _isLogin = false;
-        var _invitationCode = '';
-        var _lang = 'cn';
-    </script>
-    <script src="./js/jdi.js"></script>
-    <meta content="authenticity_token" name="csrf-param"/>
-    <meta content="iTGi6NexTXM4K3A8uNZhLqPJYaUFvoSG3E0mJgCgbHE=" name="csrf-token"/>
+    <link rel="stylesheet" href="./css/my_style.css">
 
-    <script type="text/javascript" src="//click.dji.com/statistics/spider.js"></script>
-    <script async="true" src="//static.criteo.net/js/ld/ld.js" type="text/javascript"></script>
+    <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-<div data-role="page" data-theme="b" id="home_page">
-    <div class="ui-nodisc-icon" data-position="fixed" data-role="header" data-theme="a">
-        <img class="head-btn head-btn-back" id="go-back-btn" src="./image/weixin.png" style="width: 28px;height: 28px">
 
-        <a class="head-btn head-btn-share" data-ajax="false" href="ios::share" id="ui-share-btn"></a>
-        <a class="head-btn head-btn-account" data-ajax="false" href="http://m.dji.com/cn/user_center"
-           id="ui-account-btn"></a>
+    <!-- 导航 -->
+    <div class="my_nav">
+        <a class="weixin" href="#">
+            <img src="./image/weixin.png" />
+        </a>
 
-        <h1 class="logo"><a data-ajax="false" href="./index.html">
-            <img alt="dji" src="./image/logo.png"/></a>
-        </h1>
+
+        <a class="logo" href="./index.html">
+            <img alt="dji" src="./image/logo.png"/>
+        </a>
+
+        <a class="account" href="#">
+            <img  src="./image/account.png"/>
+        </a>
     </div>
-    <div id="kv-index">
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="#"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/first.png"/>
 
+    <div class="my_page">
+        <a href="#">
+            <img class="info_img" src="./image/first.png"/>
+        </a>
+
+        <!-- 菜单 -->
+        <ul class="main-nav-list">
+            <li>
+                <a href="./aboutus.html">
+                    <img height="29" src="./image/store.png" width="32">
+                    <span>关于我们</span>
                 </a>
-            </div>
-        </div>
-        <div class="main-nav">
-            <ul class="main-nav-list">
-                <li><a class="main-nav-link" data-ajax="false" href="#">
-                    <img alt="Store" height="29" src="//dn-djistore.qbox.me/assets/cn/mobile/icon-nav-store-f8de96a1e6b8ddfe1d294676f1c9bd75.png"
-                    width="32"/><span>关于我们</span></a>
-                </li>
-                <li><a class="main-nav-link" data-ajax="false" href="http://m.dji.com/cn/support_china"><img alt="Store" height="29"
-             src="//dn-djistore.qbox.me/assets/cn/mobile/icon-nav-phone-1d655bbbf17d92e24ed1024994f06abc.png"
-             width="32"/><span
-                        class="text">产品服务</span></a></li>
-                <li><a class="main-nav-link" data-ajax="false" href="http://m.dji.com/cn/showcases"><img alt="Showcase"
-             height="29"
-             src="//dn-djistore.qbox.me/assets/cn/mobile/icon-nav-showcase-9e5a71d951160a738a6d39793eeb875f.png"
-             width="32"/><span>专家库</span></a>
-                </li>
-                <li><a class="main-nav-link" data-ajax="false" href="http://m.dji.com/cn/product/others"><img alt="More"
-                                                                                                              height="29"
-                                                                                                              src="//dn-djistore.qbox.me/assets/cn/mobile/icon-nav-more-8ad17948ab6951bc70c281149db29ddb.png"
-                                                                                                              width="32"/><span
-                        style="margin-top:6px;line-height:14px;">加入我们 </span></a></li>
-            </ul>
-        </div>
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="./custommade.html"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/second.png"/>
-
+            </li>
+            <li>
+                <a href="#">
+                    <img height="29" src="./image/store.png" width="32">
+                    <span><产品服务></产品服务></span>
                 </a>
-            </div>
-        </div>
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="#"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/third.png"/>
-
+            </li>
+            <li>
+                <a href="#">
+                    <img height="29" src="./image/store.png" width="32">
+                    <span>专家库</span>
                 </a>
-            </div>
-        </div>
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="#"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/four.png"/>
-
+            </li>
+            <li>
+                <a href="#">
+                    <img height="29" src="./image/store.png" width="32">
+                    <span style="">加入我们</span>
                 </a>
-            </div>
-        </div>
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="./about.html"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/five.png"/>
-
-                </a>
-            </div>
-        </div>
-        <div class="kv">
-            <div class="ui-body-e">
-                <a href="#"><!--  -->
-                    <img alt="kv" class="img-responsive"
-                         src="./image/six.png"/>
-
-                </a>
-            </div>
-        </div>
-
-
-
-        <div class="text-center social-share" data-role="content" id="social-share">
-            <h2>分享给好友</h2>
-            <ul class="share-list">
-                <li><a class="share-icon"
-                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-platform="weibo" data-title="" data-type="weibo" data-url="http://winnovator.com"><i
-                        class="icon-weibo">Weibo</i></a></li>
-                <li><a class="share-icon"
-                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-platform="weixin" data-title=""
-                       data-type="weixin" data-url="http://winnovator.com">
-                        <i class="icon-txwb">TXWeibo</i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <script src="//dn-djistore1.qbox.me/assets/cn/mobile/jquery.tagsinput-cdn-f42dafe9721b94a9377dcaffc9c8e61b.js"></script>
-        <script src="//dn-djistore2.qbox.me/assets/cn/mobile/share-cdn-2f4da3c293225373c2196f53176017ba.js"></script>
-    </div>
-    <div class="ui-nodisc-icon footer" data-role="content">
-        <div class="user-center-main k-footer-list">
-            <ul>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">媒体介绍</span></a></li>
-               </li>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">联络我们</span></a></li>
-                </li>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">在线客服</span></a></li>
-                </li>
-                <li><a class="clearfix" href="mailto:onlinesales@dji.com"><span class="icon-big email"></span><span
-                        class="text">合作伙伴</span></a></li>
-                </li>
-
-
-            </ul>
-        </div>
-        <ul class="ui-footer-bg footer-list" data-inset="false" data-role="listview" data-theme="d">
-            <li class="dji-policy" style="padding:10px 8px;"><h2 class="text-center"><a
-                    href="http://m.dji.com/cn/privacy_policy" style="padding-right:1em;">隐私政策</a><a
-                    href="http://m.dji.com/cn/terms_of_use" style="padding-right:1em;">使用条款</a> </h2></li>
-            <li class="copyright">
-                <h2 class="text-center font-size12">
-                    <small>Copyright &copy; 2015 幸福创客 版权所有</small>
-                </h2>
             </li>
         </ul>
 
-    </div>
-</div>
-<script type="text/javascript">(function () {
-    var $QRPopup = $('#qrcode-popup'),
-            $showQRPopup = $('#ui-qrcode-btn'),
-            $closeQRPopup = $('#qrcode-popup-close');
 
-    $showQRPopup
-            .off()
-            .on('click', function () {
-                if ($QRPopup.length > 0) {
-                    $QRPopup.show();
-                } else {
-                    location.href = I18n.url("/sessions/new?qrcode=true")
-                }
-            });
-    $closeQRPopup
-            .off()
-            .on('click', function () {
-                $QRPopup.hide();
-            });
-})();</script>
-<script type="text/javascript">if (typeof NREUMQ !== "undefined") {
-    if (!NREUMQ.f) {
-        NREUMQ.f = function () {
-            NREUMQ.push(["load", new Date().getTime()]);
-            var e = document.createElement("script");
-            e.type = "text/javascript";
-            e.src = (("http:" === document.location.protocol) ? "http:" : "https:") + "//" +
-            "js-agent.newrelic.com/nr-100.js";
-            document.body.appendChild(e);
-            if (NREUMQ.a)NREUMQ.a();
-        };
-        NREUMQ.a = window.onload;
-        window.onload = NREUMQ.f;
-    }
-    ;
-    NREUMQ.push(["nrfj", "bam.nr-data.net", "bbd1e7ee17", "3085065", "el1dRkBWWl0GFktYDltbX1cdUVlcBksUVAZc", 0, 22, new Date().getTime(), "", "", "", "", ""]);
-}</script>
+        <a href="./used.html">
+            <img class="info_img" src="./image/second.png"/>
+        </a>
+        <a href="#">
+            <img class="info_img" src="./image/third.png"/>
+        </a>
+        <a href="#">
+            <img class="info_img" src="./image/four.png"/>
+        </a>
+        <a href="./ourteam.html">
+            <img class="info_img" src="./image/five.png"/>
+        </a>
+        <a href="#">
+            <img class="info_img" src="./image/six.png"/>
+        </a>
+
+
+        <!-- 分享 -->
+        <div class="share">
+            <h2>分享给好友</h2>
+            <ul class="share-list">
+                <li>
+                    <a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/facebook.png"
+                       data-platform="facebook" data-title="" data-type="facebook"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/facebook.png"/>
+                    </a>
+                </li>
+                <li>
+                    <a class="share-icon"
+                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="weibo" data-title="" data-type="weibo"
+                       data-url="http://winnovator.com"
+                       data-ajax="false">
+                        <img src="./image/weibo.png"/>
+                    </a>
+                </li>
+                <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                       data-img="./image/weixin.png"
+                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
+                       data-ajax="false">
+                    <img src="./image/weixin_icon.jpg"/>
+                </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer_navbar">
+            <ul>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">媒体介绍</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">联络我们</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">在线客服</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a href="mailto:onlinesales@dji.com">
+                        <img src="./image/footer.png"/>
+                        <span class="text">合作伙伴</span>
+                    </a>
+                </li>
+
+                <!--  条款 -->
+                <li>
+                    <div class="policy">
+                        <a href="#">隐私政策</a>
+                        <a href="#">使用条款</a>
+                    </div>
+
+                </li>
+                <li>
+                    <div class="copyright">
+                        Copyright© 2015 幸福创客 版权所有
+                    </div>
+
+                </li>
+            </ul>
+
+        </div>
+    </div>
+
+    <script type="text/javascript" src="./js/my_share.js"></script>
 </body>
 </html>
