--- a/mobile/index.html
+++ b/mobile/index.html
@@ -120,27 +120,33 @@
             <ul>
                 <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                        <img src="./image/meitijieshao.png"/>
                         <span class="text">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                        <img src="./image/lianluowomen.png"/>
                         <span class="text">联络我们</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                        <img src="./image/zaixiankefu.png"/>
                         <span class="text">在线客服</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                    <img src="./image/hezuohuoban.png"/>
+                    <div style="position: relative;">
                         <span class="text">合作伙伴</span>
-                    </a>
+                        <select>
+                            <option value="">剑桥大学幸福研究院</option>
+                            <option value="">联动天翼科技有限公司</option>
+                            <option value="">全球华人积极心里学会</option>
+                            <option value="">哈弗大学医学院教练中心</option>
+                        </select>
+                    </div>
                 </li>
 
                 <!--  条款 -->
